Changed List.of by Arrays.asList