@@ -1,6 +1,7 @@
 package es.us.isa.restest.searchbased;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -8,12 +9,12 @@ import es.us.isa.restest.searchbased.objectivefunction.SuiteSize;
 
 public abstract class AbstractSearchBasedTest {
 	// Paths to OAS specification files
-	List<String> OAISpecPaths = List.of("src/test/resources/Bikewise/swagger.yaml");		    
+	List<String> OAISpecPaths = Arrays.asList("src/test/resources/Bikewise/swagger.yaml");
 	// Path to test configuration files
-	List<String> confPaths = List.of("src/test/resources/Bikewise/fullConf.yaml");		    
-	List<String> resourcePaths =List.of("/v2/incidents");
+	List<String> confPaths = Arrays.asList("src/test/resources/Bikewise/fullConf.yaml");
+	List<String> resourcePaths =Arrays.asList("/v2/incidents");
 	String targetDir ="src/generation/java/searchbasedtests";
-	List<String> methods =List.of("GET");
+	List<String> methods =Arrays.asList("GET");
 	public List<RestfulAPITestSuiteGenerationProblem> createTestProblems(){
 		List<RestfulAPITestSuiteGenerationProblem> problems=new ArrayList<>();
 		for(int i=0;i<OAISpecPaths.size();i++)
@@ -22,7 +23,7 @@ public abstract class AbstractSearchBasedTest {
 					SearchBasedTestSuiteGenerator.
 						buildProblem(OAISpecPaths.get(i),
 							confPaths.get(i),
-							List.of(new SuiteSize()),
+								Arrays.asList(new SuiteSize()),
 							targetDir, 2, 2)					
 					);
 		}
